readme: add faced issues section